tests/negative/ForwardModuleRef.juvix
module ForwardModuleRef;

axiom X : P.m;

module P;
  axiom p : Type;

  open M public;
end;

axiom X1 : P.m;

module M;
  axiom m : Type;
end;
